DSTEW-918 fixed env variables

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -95,6 +95,11 @@ env:
       secretKeyRef:
         name: laa-data-claims-event-service-secrets
         key: SENTRY_DSN
+  - name: SENTRY_ENVIRONMENT
+    value: "production"
+  - name: SENTRY_TRACES_SAMPLE_RATE
+    value: "0.2"
+
 grafana:
   enabled: true
 
@@ -112,8 +117,3 @@ resources:
   requests:
     cpu: 25m
     memory: 1G
-
-sentry:
-  enabled: true
-  environment: production
-  tracesSampleRate: 0.2
