DSTEW-918: Reconfig Sentry

--- a/helm-chart/templates/application-deployment-library.yaml
+++ b/helm-chart/templates/application-deployment-library.yaml
@@ -171,6 +171,22 @@ spec:
             {{- end }}
           {{- end }}
           {{- end }}
+          {{/*
+            Define Sentry environment variables
+          */}}
+          {{- if .Values.sentry.enabled }}
+          - name: SENTRY_ENABLED
+            value: "true"
+          - name: SENTRY_DSN
+            valueFrom:
+              secretKeyRef:
+                name: laa-data-claims-event-service-secrets
+                key: SENTRY_DSN
+          - name: SENTRY_ENVIRONMENT
+            value: {{ .Values.sentry.environment | quote }}
+          - name: SENTRY_TRACES_SAMPLE_RATE
+            value: {{ .Values.sentry.tracesSampleRate | quote }}
+          {{- end }}
 ---
 {{- if .Values.ingress }}
 {{- if eq .Values.ingress.externalRoute.enabled true }}
