--- a/helm-chart/values/env-staging.yaml
+++ b/helm-chart/values/env-staging.yaml
@@ -22,8 +22,7 @@ resources:
     cpu: 25m
     memory: 1G
 
-env:
-  - name: SENTRY_ENVIRONMENT
-    value: "staging"
-  - name: SENTRY_TRACES_SAMPLE_RATE
-    value: "0.25"
+sentry:
+  enabled: true
+  environment: staging
+  tracesSampleRate: 0.25
