ClaimValidationServiceTest refactored following changes, and introduced new property to see claim validation batch size via config
Signed-off-by: Jamie Briggs <jamie.briggs@justice.gov.uk>

--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -72,6 +72,9 @@ laa:
 submission:
   validation:
     minimum-period: ${SUBMISSION_VALIDATION_MINIMUM_PERIOD:APR-2025}
+claim:
+  validation:
+    claim-validation-batch-size: ${CLAIM_VALIDATION_BATCH_SIZE:100}
 
 resilience4j.retry:
   instances:
