--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -83,6 +83,11 @@ env:
       secretKeyRef:
         name: laa-data-claims-event-service-secrets
         key: SUBMISSION_VALIDATION_MINIMUM_PERIOD
+  - name: CLAIM_VALIDATION_BATCH_SIZE
+    valueFrom:
+      secretKeyRef:
+        name: laa-data-claims-event-service-secrets
+        key: CLAIM_VALIDATION_BATCH_SIZE
   - name: APPLICATION_LOGGING_LEVEL
     valueFrom:
       secretKeyRef:
