--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -79,7 +79,12 @@ claim:
 resilience4j.retry:
   instances:
     pdaRetry:
-      maxAttempts: 3
+      maxAttempts: 5
       waitDuration: 500ms
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      exponentialMaxWaitDuration: 5s
+      enableRandomizedWait: true
+      randomizedWaitFactor: 0.5
       retry-exceptions:
         - java.lang.RuntimeException
