DSTEW-980 Unit test fixed, integration test still failling

--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation 'io.github.resilience4j:resilience4j-reactor:2.1.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:mockserver'
