--- a/data-claims-event-service/src/pactTest/resources/application.yaml
+++ b/data-claims-event-service/src/pactTest/resources/application.yaml
@@ -24,3 +24,6 @@ resilience4j.retry:
     pdaRetry:
       maxAttempts: 3
       waitDuration: 500ms
+
+AWS_REGION: eu-west-1
+CLAIMS_API_ACCESS_TOKEN: f67f968e-b479-4e61-b66e-f57984931e56
