--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -121,7 +121,7 @@ spotless {
         importOrder()
         removeUnusedImports()
         cleanthat()
-        googleJavaFormat()
+        googleJavaFormat('1.27.0')
     }
 }
 
