--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -30,13 +30,14 @@ jobs:
       aws_region: ${{ vars.AWS_REGION }}
 
   pact-test:
+    needs: [ build ]
     uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact-and-publish.yml@story/pact-publish
     permissions:
       contents: write
       packages: write
     with:
       pact_test_task: "pactTest"
-      publish_pact_results: false
+      publish_pact_results: true #todo revert this to false
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
       pact_broker_url: ${{ secrets.PACT_BROKER_URL }}
@@ -44,7 +45,7 @@ jobs:
       pact_broker_password: ${{ secrets.PACT_BROKER_PASSWORD }}
 
   scan-image:
-    needs: [ build ]
+    needs: [ pact-test ]
     uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/ecr-publish-image.yml@v1
     permissions:
       contents: read
