--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -35,11 +35,13 @@ jobs:
       github_app_organisation: 'ministryofjustice'
 
   pact-test:
-    uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact-and-publish.yml@story/pact-publish
+    needs: [ build ]
+    uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact/pact-and-publish.yml@story/pact-publish
     permissions:
       contents: write
       packages: write
     with:
+      pacticipant_name: "laa-data-claims-event-service"
       pact_test_task: "pactTest"
       publish_pact_results: true
     secrets:
