--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -133,6 +133,8 @@ configurations {
 }
 
 tasks.register('pactTest', Test) {
+    systemProperty "pact.content_type.override.application/json", "application/json;charset=utf-8"
+
     description = 'Runs the pact tests.'
     group = 'verification'
 
@@ -193,7 +195,7 @@ pact {
         consumerVersion = gitSha ? "${projectVersion}-${gitSha}" : projectVersion
 
         // Define the branch from a property, environment variable, or fallback to 'main'
-        def branchName = providers.environmentVariable('GIT_BRANCH').getOrElse('main')
+        def branchName = 'main'//providers.environmentVariable('GIT_BRANCH').getOrElse('main')
 
         // For newer Pact Brokers (Recommended)
         consumerBranch = branchName
@@ -204,6 +206,7 @@ pact {
         if (branchName != 'main' && branchName != 'master') {
             tags.add('dev')
         }
+
     }
 }
 
