DSTEW-997 Implement Consumer contract testing using PACT between the Data Claims API and Data Event Service (#140)
* DSTEW-997 Implement Consumer contract testing using PACT between the Data Claims API and Data Event Service

* DSTEW-997 Implement Consumer contract testing using PACT between the Data Claims API and Data Event Service

* DSTEW-997 add config

* DSTEW-997 add config

* DSTEW-997 remove test files and use matchers

* DSTEW-997 update as per the review suggestion

* DSTEW-997 update pipeline scripts

* DSTEW-997 update state name

* DSTEW-997 sync up with changes in submit-a-bulk-claim

* DSTEW-997 point to workflows root directory

* DSTEW-997 remove publish_pact_results

* DSTEW-997 publish results to true

* DSTEW-997 add pact.provider.version

* DSTEW-997 remove properties not needed

* DSTEW-997 refactor tests to use helper methods and enum-based regex matching

* DSTEW-997 update javadoc

* DSTEW-997 update to v1

* DSTEW-997 add record deployment step

* DSTEW-997 address review comments

* DSTEW-997 address review comments

* DSTEW-997 change to original format

* DSTEW-997 upgrade to resolve CVE

--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id("com.diffplug.spotless") version "7.2.1"
     id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '1.0.4'
     id "io.sentry.jvm.gradle" version "5.12.2"
+    id 'au.com.dius.pact' version '4.6.19'
 }
 
 def versions = [sentry : '8.28.0']
@@ -57,8 +58,10 @@ dependencies {
     implementation 'org.springframework:spring-webmvc:6.2.11'
     // Upgrade to fix vulnerabilities in spring-core
     implementation 'org.springframework:spring-core:6.2.11'
-    // Upgrade to fix CVE-2025-11226 vulnerability in logback-core
-    implementation 'ch.qos.logback:logback-core:1.5.19'
+
+    // Upgrade to fix CVE-2026-1225 vulnerability in logback-core
+    implementation 'ch.qos.logback:logback-core:1.5.25'
+    implementation 'ch.qos.logback:logback-classic:1.5.25'
 
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
@@ -113,6 +116,46 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'au.com.dius.pact.consumer:junit5:4.6.19'
+}
+
+// To keep pact stuff separate
+sourceSets {
+    pactTest {
+        java.srcDir file('src/pactTest/java')
+        resources.srcDir file('src/pactTest/resources')
+        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
+        runtimeClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
+    }
+}
+
+configurations {
+    pactTestImplementation.extendsFrom testImplementation
+    pactTestRuntimeOnly.extendsFrom testRuntimeOnly
+}
+
+tasks.register('pactTest', Test) {
+    systemProperty "pact.content_type.override.application/json", "application/json;charset=utf-8"
+
+    description = 'Runs the pact tests.'
+    group = 'verification'
+
+    def pactsDir = layout.buildDirectory.dir("pacts").get().asFile
+    doFirst {
+        if (pactsDir.exists()) {
+            pactsDir.deleteDir()
+        }
+    }
+
+    testClassesDirs = sourceSets.pactTest.output.classesDirs
+    classpath = sourceSets.pactTest.runtimeClasspath
+    useJUnitPlatform()
+    // Resolve the directory path to a String for the system property
+    systemProperty 'pact.rootDir', layout.buildDirectory.dir("pacts").get().asFile.path
+}
+
+tasks.named('processPactTestResources') {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 spotless {
@@ -138,6 +181,37 @@ tasks.register("checkstyleStaged", Checkstyle) {
 
     classpath = sourceSets.main.compileClasspath
 }
+
+pact {
+    publish {
+        pactBrokerUrl = project.findProperty('pactBrokerUrl') ?: System.getenv('PACT_BROKER_URL') ?: 'http://localhost:9292'
+        pactBrokerUsername = project.findProperty('pactBrokerUsername') ?: System.getenv('PACT_BROKER_USERNAME') ?: 'ABC'
+        pactBrokerPassword = project.findProperty('pactBrokerPassword') ?: System.getenv('PACT_BROKER_PASSWORD') ?: 'ABC'
+
+        pactDirectory = layout.buildDirectory.dir("pacts").get().asFile.path
+
+        def projectVersion = project.version != 'unspecified' ? project.version : '1.0.0';
+        def gitSha = providers.environmentVariable('GIT_SHA').getOrNull()
+
+        // If we have a SHA, append it to the version for uniqueness
+        consumerVersion = gitSha ? "${projectVersion}-${gitSha}" : projectVersion
+
+        // Define the branch from a property, environment variable, or fallback to 'main'
+        def branchName = providers.environmentVariable('GIT_BRANCH').getOrElse('main')
+
+        // For newer Pact Brokers (Recommended)
+        consumerBranch = branchName
+        // For older Brokers/compatibility
+        tags = [branchName]
+
+        // Optional: add a generic 'dev' tag for anything not on main
+        if (branchName != 'main' && branchName != 'master') {
+            tags.add('dev')
+        }
+
+    }
+}
+
 
 testlogger {
     theme 'mocha'
