--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -29,8 +29,23 @@ jobs:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
       aws_region: ${{ vars.AWS_REGION }}
 
-  scan-image:
+  pact-test:
     needs: [ build ]
+    uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact-and-publish.yml@story/pact-publish
+    permissions:
+      contents: write
+      packages: write
+    with:
+      pacticipant_name: "laa-data-claims-event-service"
+      pact_test_task: "pactTest"
+    secrets:
+      gh_token: ${{ secrets.GITHUB_TOKEN }}
+      pact_broker_url: ${{ secrets.PACT_BROKER_URL }}
+      pact_broker_username: ${{ secrets.PACT_BROKER_USERNAME }}
+      pact_broker_password: ${{ secrets.PACT_BROKER_PASSWORD }}
+
+  scan-image:
+    needs: [ pact-test ]
     uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/ecr-publish-image.yml@v1
     permissions:
       contents: read
