DSTEW-997 PACT pipeline fixes

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -66,6 +66,7 @@ jobs:
     with:
       environment: uat
       deployment_name: uat
+      claim_api_environment_name: main
       image_tag: ${{ needs.ecr-publish-image.outputs.published_image_version }}
     secrets: inherit
 
@@ -81,6 +82,7 @@ jobs:
     with:
       environment: staging
       deployment_name: stg
+      claim_api_environment_name: stg
       image_tag: ${{ needs.ecr-publish-image.outputs.published_image_version }}
     secrets: inherit
 
@@ -96,5 +98,6 @@ jobs:
     with:
       environment: production
       deployment_name: prod
+      claim_api_environment_name: prod
       image_tag: ${{ needs.ecr-publish-image.outputs.published_image_version }}
     secrets: inherit
