--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -39,6 +39,7 @@ jobs:
       pacticipant_name: "laa-data-claims-event-service"
       pact_test_task: "pactTest"
       publish_pact_results: 'true'
+      provider_name: "laa-data-claims-api"
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
       pact_broker_url: 'https://laa-data-pact-broker.apps.live.cloud-platform.service.justice.gov.uk/'
