--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -33,3 +33,19 @@ jobs:
       github_app_id: ${{ vars.LAA_CCMS_CAAB_SERVICE_APP_ID }}
       github_app_private_key: ${{ secrets.LAA_CCMS_CAAB_SERVICE_KEY }}
       github_app_organisation: 'ministryofjustice'
+
+  pact-test:
+    needs: [ build ]
+    uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact-and-publish.yml@story/pact-publish
+    permissions:
+      contents: write
+      packages: write
+    with:
+      pacticipant_name: "laa-data-claims-event-service"
+      pact_test_task: "pactTest"
+      publish_pact_results: 'true'
+    secrets:
+      gh_token: ${{ secrets.GITHUB_TOKEN }}
+      pact_broker_url: 'https://laa-data-pact-broker.apps.live.cloud-platform.service.justice.gov.uk/'
+      pact_broker_username: ${{ secrets.PACT_BROKER_USERNAME }}
+      pact_broker_password: ${{ secrets.PACT_BROKER_PASSWORD }}
