--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -41,6 +41,7 @@ jobs:
       publish_pact_results: 'true'
       enable_can_i_merge: true
       provider_name: "laa-data-claims-api"
+      is_provider: false
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
       pact_broker_url: 'https://laa-data-pact-broker.apps.live.cloud-platform.service.justice.gov.uk/'
