--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -38,7 +38,7 @@ jobs:
     with:
       pacticipant_name: "laa-data-claims-event-service"
       pact_test_task: "pactTest"
-      publish_pact_results: 'true'
+      publish_pact_results: true
       enable_can_i_merge: true
       provider_name: "laa-data-claims-api"
       is_provider: false
