--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -43,7 +43,7 @@ jobs:
     with:
       pacticipant_name: "laa-data-claims-event-service"
       pact_test_task: "pactTest"
-      publish_pact_results: 'true'
+      publish_pact_results: true
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
       pact_broker_url: 'https://laa-data-pact-broker.apps.live.cloud-platform.service.justice.gov.uk/'
