--- a/reference-provider-details-api/build.gradle
+++ b/reference-provider-details-api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'org.openapi.generator' version '7.14.0'
-    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '1.0.2'
+    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '2.0.8'
 }
 
 repositories {
@@ -13,11 +13,11 @@ dependencies {
      * Upgrades to resolve vulnerabilities
      */
     // Upgrade to fix Uncontrolled Recursion vulnerability in commons-lang3
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    //implementation 'org.apache.commons:commons-lang3:3.18.0'
     // Upgrade to fix vulnerabilities in tomcat-embed-core
-    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.9'
-    // Upgrade to fix CVE-2025-11226 vulnerability in logback-core
-    implementation 'ch.qos.logback:logback-core:1.5.19'
+    //implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.9'
+    // Upgrade to fix CVE-2026-1225 vulnerability in logback-core
+    implementation 'ch.qos.logback:logback-core:1.5.25'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
