--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -1,12 +1,15 @@
 plugins {
     id 'io.freefair.lombok' version '8.14'
     id("com.diffplug.spotless") version "7.2.1"
-    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '1.0.4'
+    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '2.0.8'
     id "io.sentry.jvm.gradle" version "5.12.2"
     id 'au.com.dius.pact' version '4.6.19'
 }
 
-def versions = [sentry : '8.28.0']
+def versions = [
+        sentry : '8.31.0',
+        testcontainers : '1.20.1'
+]
 
 test {
     useJUnitPlatform()
@@ -50,17 +53,8 @@ dependencies {
     /**
      * Upgrades to resolve vulnerabilities
      */
-    // Upgrade to fix Uncontrolled Recursion vulnerability in commons-lang3
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
-    // Upgrade to fix CVE-2025-55752, CVE-2025-55754 and CVE-2025-61795 vulnerability
-    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.12'
-    // Upgrade to fix vulnerabilities in spring-webmvc
-    implementation 'org.springframework:spring-webmvc:6.2.11'
-    // Upgrade to fix vulnerabilities in spring-core
-    implementation 'org.springframework:spring-core:6.2.11'
 
     // Upgrade to fix CVE-2026-1225 vulnerability in logback-core
-    implementation 'ch.qos.logback:logback-core:1.5.25'
     implementation 'ch.qos.logback:logback-classic:1.5.25'
 
     implementation project(':reference-provider-details-api')
@@ -78,7 +72,7 @@ dependencies {
     implementation 'org.springframework.data:spring-data-commons'
 
     // Import spring-cloud-aws BOM (Bill Of Materials) for dependency management
-    implementation platform('io.awspring.cloud:spring-cloud-aws:3.4.0')
+    implementation platform('io.awspring.cloud:spring-cloud-aws:4.0.0')
     implementation 'io.awspring.cloud:spring-cloud-aws-starter'
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
     implementation 'software.amazon.awssdk:sts:2.33.7'
@@ -101,17 +95,18 @@ dependencies {
     implementation 'io.github.resilience4j:resilience4j-reactor:2.1.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+    testImplementation "org.testcontainers:junit-jupiter:$versions.testcontainers"
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:mockserver'
-    testImplementation 'org.testcontainers:localstack'
+    testImplementation "org.testcontainers:mockserver:$versions.testcontainers"
+    testImplementation "org.testcontainers:localstack:$versions.testcontainers"
     testImplementation 'org.awaitility:awaitility'
     testImplementation 'org.mock-server:mockserver-client-java:5.15.0'
     testImplementation("io.projectreactor:reactor-test:3.1.0.RELEASE")
     // Sentry
     implementation platform("io.sentry:sentry-bom:$versions.sentry")
     implementation "io.sentry:sentry-logback:$versions.sentry"
-    implementation "io.sentry:sentry-spring-boot-starter-jakarta:$versions.sentry"
+    implementation "io.sentry:sentry-spring-boot-4:$versions.sentry"
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
