--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -36,7 +36,7 @@ jobs:
 
   pact-test:
     needs: [ build ]
-    uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact-and-publish.yml@story/pact-publish
+    uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/pact-and-publish.yml@v1
     permissions:
       contents: write
       packages: write
